--- a/oasis.html
+++ b/oasis.html
@@ -101,7 +101,7 @@
 
     // Navigate to indexcopy.html when the button is clicked
     button.addEventListener('click', () => {
-      window.location.href = 'lobby.html'; // Change to your new HTML file
+      window.location.href = 'index.html'; // Change to your new HTML file
     });
   </script>
 
