added mountain scene

--- a/index.html
+++ b/index.html
@@ -8,18 +8,8 @@
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 </head>
 
-<!-- TODOs:
- 1. find actual pictures
- 2. colors?
- 3. make room larger (expand walls) 
- 4. center mat - figure out
- 5. decor -->
-
 <body>
   <a-scene>
-
-    <!-- 360-degree skybox with clouds outside the window -->
-    <!-- <a-sky src="./eberhard-grossgasteiger-J9NDmBVhN04-unsplash.jpg" material="repeat: 4 4"></a-sky> -->
 
     <!-- bgm  -->
     <a-sound src="./assets/audio/relaxing-piano-music-248868.mp3" autoplay="true" position="0 2 5"></a-sound>
@@ -99,7 +89,7 @@
              rotation="0 0 0" 
              width="1.5" height="0.5" 
              color="#FF9800">
-      <a-text value="Yumna add here" align="center" color="#FFFFFF" position="0 0 0.1"></a-text>
+      <a-text value="Mountains" align="center" color="#FFFFFF" position="0 0 0.1"></a-text>
     </a-plane>
 
 
@@ -127,7 +117,7 @@
 
     // Placeholder for future feature
     button3.addEventListener('click', () => {
-      alert('This feature is coming soon!');
+      window.location.href = 'mountain.html';
     });
   </script>
 </body>
