--- a/forest.html
+++ b/forest.html
@@ -12,7 +12,7 @@
   <a-scene>
 
     <!-- 360-Degree Nature Background -->
-    <a-sky src="image1.png" rotation="0 -90 0"></a-sky>
+    <a-sky src="./assets/img/image1.png" rotation="0 -90 0"></a-sky>
 
     <!-- Soft Ambient Music -->
     <a-sound src="./assets/audio/relaxing-piano-music-248868.mp3" autoplay="true" loop="true" position="0 1 0"></a-sound>
